adjusting the navbar-fixed-top so that it doesn't interfere with the regular application css on narrower screen widths

--- a/media/marco/css/marco_style.css
+++ b/media/marco/css/marco_style.css
@@ -1182,7 +1182,7 @@ body.borderless #map-wrapper {
 		margin-top: 0px;
 	}
 
-    .navbar-fixed-top {
+    .blog .navbar-fixed-top {
         position: fixed;
     }
     
